Try a more sustainable Travis conf

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,5 +1,6 @@
 [buildout]
-extends = buildout.cfg
+extends = https://raw.github.com/UPCnet/genwebupc4.buildout/4.2/buildout.cfg
+          https://raw.github.com/UPCnet/genwebupc4.buildout/4.2/versions.cfg
           https://raw.github.com/UPCnet/genwebupc4.buildout/4.2/travis-sources.cfg
 
 allow-hosts =
