--- a/travis.cfg
+++ b/travis.cfg
@@ -1,9 +1,10 @@
 [buildout]
-extends = https://raw.github.com/UPCnet/genwebupc4.buildout/4.2/buildout.cfg
-          https://raw.github.com/UPCnet/genwebupc4.buildout/4.2/versions.cfg
-          https://raw.github.com/UPCnet/genwebupc4.buildout/4.2/travis-sources.cfg
+extends = https://raw.github.com/UPCnet/genwebupc4.buildout/4.3/buildout.cfg
+          https://raw.github.com/UPCnet/genwebupc4.buildout/4.3/versions.cfg
+          https://raw.github.com/UPCnet/genwebupc4.buildout/4.3/travis-sources.cfg
 
 allow-hosts =
+    colladaverda.upc.edu
     pypi.upc.edu
     *.plone.org
     *.python.org
@@ -15,6 +16,6 @@ allow-hosts =
 
 # network speedup
 socket-timeout = 3
-index = http://pypi.upc.edu/mirror
+index = http://colladaverda.upc.edu/pypi
 
 parts = test
