--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 #  - touch /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
 #  - echo "import sys; sys.setdefaultencoding('utf-8')" > /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
   - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg --distribute
+  - python bootstrap.py -c travis.cfg
   - bin/buildout -Nc travis.cfg
 before_script:
   - "export DISPLAY=:99.0"
