Try to fix Travis

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,9 +1,11 @@
 [buildout]
-extends = https://raw.github.com/collective/buildout.plonetest/master/buildout-cache.cfg
+extends = https://raw.github.com/UPCnet/genweb.buildout/master/config/customizeme.cfg
+          https://raw.github.com/UPCnet/genweb.buildout/master/config/projects.cfg
+          https://raw.github.com/UPCnet/genweb.buildout/master/travis-sources.cfg
+          https://raw.github.com/collective/buildout.plonetest/master/buildout-cache.cfg
           https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
-          https://raw.github.com/UPCnet/genwebupc4.buildout/4.3/buildout.cfg
-          https://raw.github.com/UPCnet/genwebupc4.buildout/4.3/versions.cfg
-          https://raw.github.com/UPCnet/genwebupc4.buildout/4.3/travis-sources.cfg
+          https://raw.github.com/UPCnet/genweb.buildout/master/buildout.cfg
+          https://raw.github.com/UPCnet/genweb.buildout/master/versions.cfg
 
 plone-series = 4.3
 
