--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python: "2.7"
 install:
 #  - touch /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
 #  - echo "import sys; sys.setdefaultencoding('utf-8')" > /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
+  - touch customizeme.py
+  - echo "[ldapconfig]\nbindpasswd = secret" > customizeme.py
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
   - bin/buildout -Nc travis.cfg
