--- a/travis.cfg
+++ b/travis.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = https://raw.github.com/UPCnet/genweb.buildout/master/config/customizeme.cfg
+extends = customizeme.cfg
           https://raw.github.com/UPCnet/genweb.buildout/master/config/projects.cfg
           https://raw.github.com/UPCnet/genweb.buildout/master/travis-sources.cfg
           https://raw.github.com/collective/buildout.plonetest/master/buildout-cache.cfg
