--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ python: "2.7"
 install:
 #  - touch /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
 #  - echo "import sys; sys.setdefaultencoding('utf-8')" > /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
-  - touch customizeme.py
-  - echo "[ldapconfig]\nbindpasswd = secret" > customizeme.py
+  - touch customizeme.cfg
+  - echo "[ldapconfig]\nbindpasswd = secret" > customizeme.cfg
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
   - bin/buildout -Nc travis.cfg
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script: bin/test -s genweb.theme
+script: bin/test -s genweb.core
