--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ install:
 #  - touch /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
 #  - echo "import sys; sys.setdefaultencoding('utf-8')" > /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
   - touch customizeme.cfg
-  - echo "[ldapconfig]\nbindpasswd = secret" > customizeme.cfg
+  - echo "[ldapconfig]" > customizeme.cfg
+  - echo "bindpasswd = secret" >> customizeme.cfg
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
   - bin/buildout -Nc travis.cfg
