Try fix Travis 5

--- a/travis.cfg
+++ b/travis.cfg
@@ -18,3 +18,8 @@ allow-hosts +=
     pypi.upc.edu
     code.google.com
     robotframework.googlecode.com
+
+[test]
+recipe = zc.recipe.testrunner
+defaults = ['--exit-with-status', '--auto-color', '--auto-progress', '--verbose', '--ndiff']
+eggs = genweb.core[test]
