--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python: "2.7"
+sudo: false
+cache:
+  directories:
+  - eggs
 install:
 #  - touch /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
 #  - echo "import sys; sys.setdefaultencoding('utf-8')" > /home/travis/virtualenv/python2.7/lib/python2.7/sitecustomize.py
@@ -8,7 +12,7 @@ install:
   - echo "[ldapconfig]" > customizeme.cfg
   - echo "bindpasswd = secret" >> customizeme.cfg
   - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg
+  - python bootstrap.py -c travis.cfg --setuptools-version=7.0 --version=2.2.5
   - bin/buildout -Nc travis.cfg
 before_script:
   - "export DISPLAY=:99.0"
