--- a/travis.cfg
+++ b/travis.cfg
@@ -2,17 +2,14 @@
 extends = customizeme.cfg
           https://raw.github.com/UPCnet/genweb.buildout/master/config/projects.cfg
           https://raw.github.com/UPCnet/genweb.buildout/master/config/travis-sources.cfg
-          https://raw.github.com/collective/buildout.plonetest/master/buildout-cache.cfg
-          https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+          https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
           https://raw.github.com/UPCnet/genweb.buildout/master/buildout.cfg
           https://raw.github.com/UPCnet/genweb.buildout/master/versions.cfg
 
 plone-series = 4.3
+versions = versions
 
-parts =
-    download
-    install
-    test
+parts += test
 
 allow-hosts +=
     pypi.upc.edu
@@ -23,3 +20,8 @@ allow-hosts +=
 recipe = zc.recipe.testrunner
 defaults = ['--exit-with-status', '--auto-color', '--auto-progress', '--verbose', '--ndiff']
 eggs = genweb.core[test]
+
+[versions]
+setuptools =
+distribute =
+zc.buildout =
