--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - echo "[ldapconfig]" > customizeme.cfg
   - echo "bindpasswd = secret" >> customizeme.cfg
   - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg --setuptools-version=7.0 --version=2.2.5
+  - python bootstrap.py -c travis.cfg
   - bin/buildout -Nc travis.cfg
 before_script:
   - "export DISPLAY=:99.0"
