--- a/bower.json
+++ b/bower.json
@@ -21,14 +21,19 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
-    "bootstrap": "~3.1.1",
+  "devDependencies": {},
+  "dependencies": {
+    "angular": "~1.3.13",
+    "angular-resource": "~1.3.13",
+    "angular-sanitize": "~1.3.13",
+    "bootstrap": "~3.3.2",
     "fontawesome": "latest",
-    "modernizr": "~2.8.2",
-    "underscore": "~1.6.0",
+    "underscore": "~1.7.0",
+    "modernizr": "~2.8.3",
     "handlebars": "latest",
     "typeahead.js": "latest",
     "select2": "https://github.com/ivaynberg/select2.git#master",
-    "wookmark-jquery": "latest"
+    "wookmark-jquery": "latest",
+    "angular-ui-select": "~0.9.9"
   }
 }
