Improve indicators API
- Include type and frequency in category definition.
- Add CalculatorException class.

--- a/genweb/core/tests/indicators/1-service.1-indicator.1-category_exception/1-indicator.yaml
+++ b/genweb/core/tests/indicators/1-service.1-indicator.1-category_exception/1-indicator.yaml
@@ -9,5 +9,5 @@ categories:
     calculator: genweb.core.tests.test_registry_integration.MockCalculator111
   - id: category-1.2
     description: Category 1.2
-    calculator: genweb.core.tests.test_registry_integration.MockCalculator112
+    calculator: genweb.core.tests.test_registry_integration.MockCalculatorWithException
 
